--- a/site/_posts/0000-01-01-doc-bbf.markdown
+++ b/site/_posts/0000-01-01-doc-bbf.markdown
@@ -10,6 +10,15 @@ categories:
 
 [Library Reference: ccv_bbf.c](/lib/ccv-bbf/)
 
+Deprecated
+----------
+
+This feature is deprecated as it is no longer considered either fast or accurate
+for the task its most interested in (in this case, face detection) in libccv 0.7
+
+The implementation will be removed in the version after libccv 0.7 in favor of
+SCD (for face detection).
+
 What's BBF?
 -----------
 
